# mcp-app

./: README.md  mcp-app.sln
api/: Program.cs  testApi.http
api/Properties/: launchSettings.json
mcp-client/: .env  client.py  pyproject.toml
mcp-server/: .env  pyproject.toml  server.py
